<resources>
    <string name="app_name">MySnapFoodLog</string>
    <string name="splash_title">UNLV Food Logger</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_register">Register </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_phoneno">This number is not valid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remember_login_text">Remember me</string>

    <!--Login Fault Messages-->
    <string name="MSG_LOGIN_DISABLED">Login has been disabled for the user account.</string>
    <string name="MSG_LOGIN_DISABLED_MULTIPLE">User cannot login because Multiple Logins disabled and there is a logged in user for the account.</string>
    <string name="MSG_LOGIN_INVALID_CREDENTIALS">Invalid login or password.</string>
    <string name="MSG_LOGIN_ACCOUNT_LOCKED">Account locked out due to too many failed logins.</string>
    <string name="MSG_LOGIN_ACCOUNT_MULTIPLE_LOGIN_LIMIT_REACHED">Multiple login limit for the same user account has been reached.</string>

    <string name="MSG_REGISTER_FAILED">External registration failed with an error.</string>
    <string name="MSG_REGISTER_USER_ALREADY_EXISTS">User with the same identity already exists, Please Try Again with different details.</string>
    <string name="MSG_REGISTER_EMAIL_WRONG">Email address is in the wrong format</string>

    <string name="network_dialog_title">Internet Connectivity Issue</string>
    <string name="network_error">A network error occurred. Please Check your connection and try again. </string>
    <string name="register_title">User Registration</string>
    <string name="prompt_phoneno">Phone Number</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <!--Activity Messages-->
    <string name="loading_message">Loading...</string>
    <string name="uploading_message">Uploading...</string>
    <string name="type_here">Type description here.</string>

    <!--Settings Page-->
    <string name="logout">Logout</string>
    <string name="help_title">Help and Support</string>
<<<<<<< HEAD
    <string name="contact_info">Call: 702-895-5745\nEmail: foodappdevelopers@gmail.com</string>
    <string name="help_phone">Call: 702&#8211;895&#8211;5745</string>
    <string name="help_phone_uri">tel:7028955745</string>
=======
    <string name="contact_info">Call: 702-895-5746\nEmail: foodappdevelopers@gmail.com</string>
    <string name="help_phone">702&#8211;895&#8211;5746</string>
    <string name="help_phone_uri">tel:702-895-5746</string>
>>>>>>> 44e4570be2ee49aa0a17b0d101c72d0b633ed32f
    <string name="help_email">Email: foodappdevelopers@gmail.com</string>
    <string name="help_email_uri">foodappdevelopers@gmail.com</string>
    <string name="email_us">Email Us</string>
    <string name="version">Version 1.1.3</string>
    <string name="copyright">Copyright © 2019. All rights Reserved.</string>
    <string name="rate">Rate us! </string>
    <string name="tips">Tips</string>
    <string name="today">Today</string>
    <string name="coach">Coach</string>
    <string name="settings">Settings</string>

</resources>
