<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:paddingBottom="70dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="?attr/actionModeBackground" >


    <LinearLayout
        android:id="@+id/settings_logo_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/setting_logo"
            android:contentDescription="@null"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="36dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#01579B"
            android:fontFamily="@font/courier_prime"
            android:textSize="30sp"/>
            <!--android:textSize="22sp" />-->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_below="@id/settings_logo_options">


        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:background="@drawable/roundbtn_setting"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/help_phone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/help_phone"
            android:textColor="@android:color/white"
            android:background="@drawable/roundbtn_setting"
            android:textSize="14sp" />

        <Button
            android:id="@+id/help_email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="110dp"
            android:layout_marginRight="110dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/email_us"
            android:textColor="@android:color/white"
            android:background="@drawable/roundbtn_setting"
            android:textSize="14sp" />
            <!--android:text="@string/help_email"-->



    </LinearLayout>

    <LinearLayout
        android:id="@+id/social_media_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_options"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/facebook_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:onClick="onClick"
            android:src="@drawable/facebook_button"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/twitter_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:onClick="onClick"
            android:src="@drawable/twitter_button"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/instangram_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:onClick="onClick"
            android:src="@drawable/instagram_button"
            tools:ignore="ContentDescription" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/app_info"
        android:layout_width="360dp"
        android:layout_height="447dp"
        android:layout_below="@id/social_media_logo"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="10dp">

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:clickable="false"
            android:drawableLeft="@android:drawable/btn_star_big_off"
            android:text="Rate Us"
            android:textColor="@android:color/black"
            android:textSize="22sp" />-->

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:layout_marginBottom="5dp"-->
            <!--android:drawableLeft="@android:drawable/ic_menu_info_details"-->
            <!--android:text="@string/help_title"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="22sp" />-->


        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/version"
            android:textColor="#01579B"
            android:textSize="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="@string/copyright"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"/>


    </LinearLayout>

</RelativeLayout>